# QCodeEditor

./: CMakeLists.txt
example/include/: MainWindow.hpp
include/: QCompletingSymbol  QCompletingSymbolModel
include/internal/: QCXXHighlighter.hpp  QCodeEditor.hpp  QCompletingSymbol.hpp  QCompletingSymbolModel.hpp  QFaustCompleter.hpp  QFaustHighlighter.hpp  QGLSLCompleter.hpp  QGLSLHighlighter.hpp  QHighlightRule.hpp  QJSCompleter.hpp  QJSHighlighter.hpp  QJSONHighlighter.hpp  QJavaHighlighter.hpp  QLanguage.hpp  QLineNumberArea.hpp  QLuaCompleter.hpp  QLuaHighlighter.hpp  QPythonCompleter.hpp  QPythonHighlighter.hpp  QSearchWidget.hpp  QStyleSyntaxHighlighter.hpp  QSyntaxStyle.hpp  QXMLHighlighter.hpp
resources/: qcodeeditor_resources.qrc
src/internal/: QCodeEditor.cpp  QCompletingSymbolModel.cpp  QJSCompleter.cpp  QLuaCompleter.cpp  QLuaHighlighter.cpp  QSearchWidget.cpp  QSyntaxStyle.cpp
